; ModuleID = '/home/carl/AnghaBench/postgres/src/backend/utils/adt/extr_ruleutils.c_pg_get_expr_worker.c'
source_filename = "/home/carl/AnghaBench/postgres/src/backend/utils/adt/extr_ruleutils.c_pg_get_expr_worker.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@NIL = common dso_local global i32* null, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32* (i32*, i32, i8*, i32)* @pg_get_expr_worker to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32* @pg_get_expr_worker(i32* %0, i32 %1, i8* %2, i32 %3) #0 {
  %5 = alloca i32*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i8*, align 8
  %8 = alloca i32, align 4
  %9 = alloca i32*, align 8
  %10 = alloca i32*, align 8
  %11 = alloca i8*, align 8
  %12 = alloca i8*, align 8
  store i32* %0, i32** %5, align 8
  store i32 %1, i32* %6, align 4
  store i8* %2, i8** %7, align 8
  store i32 %3, i32* %8, align 4
  %13 = load i32*, i32** %5, align 8
  %14 = call i8* @text_to_cstring(i32* %13)
  store i8* %14, i8** %11, align 8
  %15 = load i8*, i8** %11, align 8
  %16 = call i64 @stringToNode(i8* %15)
  %17 = inttoptr i64 %16 to i32*
  store i32* %17, i32** %9, align 8
  %18 = load i8*, i8** %11, align 8
  %19 = call i32 @pfree(i8* %18)
  %20 = load i32, i32* %6, align 4
  %21 = call i64 @OidIsValid(i32 %20)
  %22 = icmp ne i64 %21, 0
  br i1 %22, label %23, label %27

23:                                               ; preds = %4
  %24 = load i8*, i8** %7, align 8
  %25 = load i32, i32* %6, align 4
  %26 = call i32* @deparse_context_for(i8* %24, i32 %25)
  store i32* %26, i32** %10, align 8
  br label %29

27:                                               ; preds = %4
  %28 = load i32*, i32** @NIL, align 8
  store i32* %28, i32** %10, align 8
  br label %29

29:                                               ; preds = %27, %23
  %30 = load i32*, i32** %9, align 8
  %31 = load i32*, i32** %10, align 8
  %32 = load i32, i32* %8, align 4
  %33 = call i8* @deparse_expression_pretty(i32* %30, i32* %31, i32 0, i32 0, i32 %32, i32 0)
  store i8* %33, i8** %12, align 8
  %34 = load i8*, i8** %12, align 8
  %35 = call i32* @string_to_text(i8* %34)
  ret i32* %35
}

declare dso_local i8* @text_to_cstring(i32*) #1

declare dso_local i64 @stringToNode(i8*) #1

declare dso_local i32 @pfree(i8*) #1

declare dso_local i64 @OidIsValid(i32) #1

declare dso_local i32* @deparse_context_for(i8*, i32) #1

declare dso_local i8* @deparse_expression_pretty(i32*, i32*, i32, i32, i32, i32) #1

declare dso_local i32* @string_to_text(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
